# burrow

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  burrowd.service  install.sh  servers.conf
Docs/: CHANGELOG.md  architecture.md  burrow-client-manual.md  burrow-concept.md  burrowd-manual.md  ideas-for-burrow.md  todos.md
burrows/.well-known/: security.txt
burrows/~bruno/: .burrow  _reading-list.gph  about.txt  bookmarks.gph  changelog.txt  colophon.txt  links.gph  now.txt  timecapsule-2026.txt
burrows/~bruno/gallery/: burrow-logo.txt  coffee.txt  maze.txt  plant.txt  sunset.txt
burrows/~bruno/phlog/: .burrow  2026-03-10-the-weight-of-a-webpage.txt  2026-03-17-why-i-left-medium.txt  2026-03-23-on-inspiration.txt  guest-~maya-on-slowness.txt  why-plaintext-part-01.txt  why-plaintext-part-02.txt  why-plaintext-part-03.txt
burrows/~bruno/projects/: .burrow  revend.txt
burrows/~bruno/rings/: deep-web-craft.ring  indie-web.ring
burrows/~burrow/: .burrow  about.txt
burrows/~burrow/concepts/: .burrow  01-manifesto.txt  02-identity.txt  03-protocol.txt  04-markup.txt  05-social.txt  06-discovery.txt  07-design.txt  08-client.txt  09-federation.txt  10-business.txt  11-future.txt
burrows/~burrow/manual/: .burrow  02-writing.txt  03-drafts.txt  04-directories.txt  05-guestbook.txt  06-bookmarks.txt  07-rings.txt  08-search.txt  09-discover.txt  10-mentions.txt  11-gallery.txt  12-feeds.txt  16-cli.txt  17-philosophy.txt
burrows/~maya/: .burrow  about.txt  bookmarks.gph
src/: cli.rs  config.rs  lib.rs  main.rs  render.rs  tests.rs
(+29 files in other folders)
