[package]
name = "burrow"
version = "0.1.0"
edition = "2021"
description = "The internet, minus the parts that made you hate the internet."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.12"
chrono = "0.4"
