[package]
name = "burrow"
version = "0.1.0"
edition = "2021"
description = "The internet, minus the parts that made you hate the internet."

[[bin]]
name = "burrowd"
path = "src/main.rs"

[[bin]]
name = "burrow"
path = "src/cli.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
