[package]
name = "burrow"
version = "0.1.0"
edition = "2021"
description = "The internet, minus the parts that made you hate the internet."

[[bin]]
name = "burrowd"
path = "src/main.rs"

[[bin]]
name = "burrow"
path = "src/cli.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
